--- a/src/swarm_rescue/solutions/team_info.yml
+++ b/src/swarm_rescue/solutions/team_info.yml
@@ -1,4 +1,4 @@
 # Information about your team
-team_number: 0
-team_name: the dream team
-team_members: tom, alice, bob, lea
+team_number: 2
+team_name: 
+team_members: Robinson Magnoux, Alice Joyeux, Salva De la Asuncion, Sara Marques, Etienne Fouque
